--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,11 +1,19 @@
 {
   "name": "cp2",
+  "homepage": "https://yashavanthap55.github.io/HOSPITAL_APPOINTMENT",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "backend": "node app.js",
+    "dev": "concurrently \"npm start\" \"npm run backend\"",
+    "full-start": "npm run dev",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -13,6 +21,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.114.4",
     "axios": "^1.7.7",
+    "gh-pages": "^6.2.0",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "locomotive-scroll": "^5.0.0-beta.21",
