--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,17 +5,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview",
     "backend": "node app.js",
-    "dev": "concurrently \"npm start\" \"npm run backend\"",
-    "full-start": "npm run dev",
+    "full-start": "concurrently \"npm run dev\" \"npm run backend\"",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
@@ -41,6 +37,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.11"
   }
 }
