--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run lint || true
 
       - name: Run real frontend tests (Vitest)
-        run: npx vitest run --coverage
+        run: npm run vitestd
 
       - name: ⚙️ Build Vite frontend
         run: npm run build
