--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "vite preview",
     "full-start": "concurrently \"npm run dev\" \"npm run backend\"",
     "lint": "echo 'Lint Passed!'",
-    "deploy": "npx gh-pages -d dist",
+    "deploy": "node ./node_modules/gh-pages/bin/gh-pages.js -d dist",
     "vitestd":"echo 'ViTest Passes succesfully!'",
     "test": "echo 'Test 1: Unit Test - Passed!' && echo 'Test 2: Integration Test - Passed!' && echo 'Test 3: Code Coverage - Passed!' && echo 'Test 4: Acceptance Test - Passed!' && echo 'Test 5: Usability Test - Passed!' && echo 'Test 6: Performance Test - Passed!' && echo 'All tests completed!'"
   },
