--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run real frontend tests (Vitest)
         run: npm run vitestd
 
-      - name: ⚙️ Build Vite frontend
+      - name: Build Vite frontend
         run: npm run build
 
   deploy:
@@ -52,9 +52,4 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.email "yashavanthap.btech23@gmail.com"
-          git config --global user.name "yashavanthap55"
-          npm run deploy
+        run: npm run deploy
