--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "start": "vite preview",
     "full-start": "concurrently \"npm run dev\" \"npm run backend\"",
     "lint": "echo 'Lint Passed!'",
-    "deploy": "echo 'Automatically deployed '",
-    "vitestd":"echo 'ViTest Passes succesfully!'",
+    "deploy": "node ./node_modules/gh-pages/bin/gh-pages.js -d dist",
+    "vitestd": "echo 'ViTest Passes succesfully!'",
     "test": "echo 'Test 1: Unit Test - Passed!' && echo 'Test 2: Integration Test - Passed!' && echo 'Test 3: Code Coverage - Passed!' && echo 'Test 4: Acceptance Test - Passed!' && echo 'Test 5: Usability Test - Passed!' && echo 'Test 6: Performance Test - Passed!' && echo 'All tests completed!'"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.114.4",
     "axios": "^1.7.7",
-    "gh-pages": "^6.2.0",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "lint": "^0.8.19",
@@ -40,6 +39,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "jsdom": "^26.1.0",
     "vite": "^5.4.11",
