--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Set Git identity
         run: |
           git config --global user.email "yashavanthap.btech23@gmail.com"
-          git config --global user.name "yashavanthap55"
+          git config --global user.name "Yashavantha P"
       
       - name: Deploy to GitHub Pages
         run: npm run deploy
